# file_compressor

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  build-appimage.sh  build.rs
.claude/: settings.json
.claude/agents/: test-coverage-reviewer.md
.claude/skills/release-prep/: SKILL.md
.github/workflows/: release.yml
src/: gui.rs  lib.rs  main.rs
