[package]
name = "file_compressor"
version = "0.2.0"
edition = "2021"
description = "Un programma per comprimere e decomprimere file con l'algoritmo Zstandard"

[lib]
name = "file_compressor"
path = "src/lib.rs"

[[bin]]
name = "file_compressor"
path = "src/main.rs"

[[bin]]
name = "file_compressor_gui"
path = "src/gui.rs"

[dependencies]
zstd = "0.13"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
tar = "0.4"
rayon = "1.10"
glob = "0.3"
eframe = "0.29"
rfd = "0.15"
