[package]
name = "file_compressor"
version = "0.2.1"
edition = "2021"
authors = ["edocico"]
description = "Un programma per comprimere e decomprimere file con l'algoritmo Zstandard"
license = "MIT OR Apache-2.0"
repository = "https://github.com/edocico/file_compressor"
homepage = "https://github.com/edocico/file_compressor"
documentation = "https://github.com/edocico/file_compressor"
keywords = ["compression", "zstd", "archiver", "cli", "gui"]
categories = ["command-line-utilities", "compression", "filesystem"]
readme = "README.md"

[lib]
name = "file_compressor"
path = "src/lib.rs"

[[bin]]
name = "file_compressor"
path = "src/main.rs"

[[bin]]
name = "file_compressor_gui"
path = "src/gui.rs"

[dependencies]
zstd = "0.13"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
tar = "0.4"
rayon = "1.10"
glob = "0.3"
eframe = "0.29"
rfd = "0.15"
sys-locale = "0.3"
ctrlc = "3.4"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# Profilo release ottimizzato per massime prestazioni
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Profilo per build veloci ma con ottimizzazioni
[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 4
